# nexus-athena

./: .gitattributes  .gitignore  LICENSE  README.md  athena-final-opus-plan-v2.md  athena-final-opus-plan-v3.md  athena-final-opus-plan.md  athena-opus-plan-v3.1-harness.md  athena-opus-plan-v4-bidirectional.md  athena.py  hermes_playbook.md  install.sh  pytest.ini  run-report.template.md
.claude-plugin/: marketplace.json  plugin.json
commands/: compile.md  scenarios.md  specify_root.md
console/: .gitignore
console/src-tauri/: Cargo.toml  tauri.conf.json
console/src-tauri/capabilities/: default.json
console/src-tauri/icons/: icon.icns
console/src-tauri/src/: commands.rs  lib.rs  main.rs
evals/: .gitignore  EFFICIENCY.md  EVALS.md  llm.py  real_pipeline.py  run_l3.py  run_l3_agg.py  run_real_agg.py
examples/: pipe_run_humaneval.py
hermes/: ATHENA_PLAN.yaml  ATHENA_TASK.yaml  HERMES_PLUGIN.md  INTEGRATION.md
lib/: __init__.py  ast.py  bd_client.py  frontend.py  hermes_plan.py  plan2beads.py  plan_parser.py  scenario_parser.py  seams.py  speckit_parser.py  versioning.py
mcp/athena_mcp/: pyproject.toml
mcp/athena_mcp/athena_mcp/: __init__.py  server.py  verbs.py
mcp/athena_mcp/tests/: test_verbs.py
obsidian-ai-pack/: .gitignore  Install-ObsidianAI.ps1  Install.bat  MANUAL-INSTALL.txt  README.md
ralph/: AGENTS.md  INTERFACE.md  adapter.py  batch_run_structured.py  gate.sh  loop.sh  plan_run.py  run_claurst.sh  run_openhands.sh
speckit/: seed.md
tests/: test_adapter.py  test_ast.py  test_bd_integration.py  test_bd_integration_v3.py  test_cli.py  (+13 more)
(+164 files in other folders)
