[package]
name = "athena-console"
version = "0.1.0"
description = "Athena Console — read-mostly cockpit over the framework seams"
authors = ["athena"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "athena_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
