[project]
name = "athena-mcp"
version = "0.0.0"
description = "Athena MCP server — planning verbs for Hermes (wraps plan2beads + bd)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athena_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
